Removing dcheck in SetUploadConsentImpl.

This DCHECK is very easy to trigger by developers, googlers specifically, without actually violating the intent of the DCHECK.

BUG=648594

Review-Url: https://codereview.chromium.org/2353133003
Cr-Commit-Position: refs/heads/master@{#419882}

Former-commit-id: 6bbba65a7074b6cdbe1dada8d51d0ba90ff944b6